# 3-ejercicio-de-dise-o-y-codificaci-n-yura-hernandez-y-juan-jose-bolivar

./: README.md  galeria_diagrama.md
EjercicioGalería/: CMakeLists.txt  main.cpp
EjercicioGalería/src/: Artista.cpp  Artista.h  Galeria.cpp  Galeria.h  Obra.h
galeriaEjercicio/: CMakeLists.txt  main.cpp
galeriaEjercicio/src/: Galeria.cpp  Obra.cpp
tiendaDeportes/: CMakeLists.txt  DiagramaUMLTD.md  main.cpp
tiendaDeportes/src/: Cliente.cpp  Cliente.h  Factura.cpp  Factura.h  Producto.cpp  Producto.h  TiendaDeportiva.cpp  TiendaDeportiva.h
